--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,12 @@ buildscript {
         junitVersion = "4.12"
         okhttpVersion = "3.12.0"
         jsonPathVersion = "2.4.0"
-		springSecurityOAuthAutoconfigVersion = "2.1.0.RELEASE"
-		springCloudSsoVersion = "2.1.3.RELEASE"
+        springCloudVersion = "Finchley.SR2"
+        springCloudServicesClientLibrariesVersion = "2.0.2.RELEASE"
+        springCloudCommonsVersion = "2.0.0.RELEASE"
+        hystrixJavanicaVersion = "1.5.18"
+        springSecurityOAuthAutoconfigVersion = "2.1.0.RELEASE"
+        springCloudSsoVersion = "2.1.3.RELEASE"
     }
 
     repositories {
@@ -47,7 +51,6 @@ subprojects {
         compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
         compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
         compile "org.slf4j:slf4j-api:$slf4jVersion"
-        compile "org.springframework.cloud:spring-cloud-commons:2.0.0.RELEASE"
 
         testCompile "junit:junit:$junitVersion"
         testCompile "org.mockito:mockito-core:$mockitoVersion"
