--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -13,3 +13,10 @@ applications:
   - tracker-service-registry
   - tracker-circuit-breaker-dashboard
   - tracker-sso
+  security:
+  oauth2:
+    client:
+      client-id: client
+      client-secret: supersecret
+      token-info-uri: https://oauth-pal-egerr.cfapps.io/oauth/check_token
+      access-token-uri: https://oauth-pal-egerr.cfapps.io/oauth/access_token 
