--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -19,4 +19,4 @@ applications:
       client-id: tracker-client
       client-secret: supersecret
       token-info-uri: https://oauth-pal-egerr.cfapps.io/oauth/check_token
-      access-token-uri: https://oauth-pal-egerr.cfapps.io/oauth/access_token 
+      access-token-uri: https://oauth-pal-egerr.cfapps.io/oauth/token
