--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -16,7 +16,7 @@ applications:
   security:
   oauth2:
     client:
-      client-id: client
+      client-id: tracker-client
       client-secret: supersecret
       token-info-uri: https://oauth-pal-egerr.cfapps.io/oauth/check_token
-      access-token-uri: https://oauth-pal-egerr.cfapps.io/oauth/access_token 
+      access-token-uri: https://oauth-pal-egerr.cfapps.io/oauth/token
