--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -17,5 +17,5 @@ applications:
     client:
       client-id: tracker-client
       client-secret: supersecret
-      token-info-uri: https://oauth-pal-egerr.cfapps.io/oauth/check_token
-      access-token-uri: https://oauth-pal-egerr.cfapps.io/oauth/token
+      token-info-uri: http://oauth-pal-egerr.cfapps.io/oauth/check_token
+      access-token-uri: http://oauth-pal-egerr.cfapps.io/oauth/token
