--- a/applications/allocations-server/src/main/resources/application.properties
+++ b/applications/allocations-server/src/main/resources/application.properties
@@ -9,4 +9,7 @@ management.endpoints.web.exposure.include=env,health
 security.oauth2.resource.token-info-uri=https://oauth-pal-egerr.cfapps.io/oauth/check_token
 security.oauth2.client.access-token-uri=https://oauth-pal-egerr.cfapps.io/oauth/token
 security.oauth2.client.grant-type=client_credentials
+security.oauth2.client.client-id= tracker-client
+security.oauth2.client.client-secret=supersecret
+
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
