--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -8,15 +8,10 @@ applications:
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
     GRANT_TYPE: client_credentials
+    SECURITY_OAUTH2_CLIENT_CLIENT_ID: tracker-client
+    SECURITY_OAUTH2_CLIENT_CLIENT_SECRET: supersecret
   services:
   - tracker-allocations-database
   - tracker-service-registry
   - tracker-circuit-breaker-dashboard
   - tracker-sso
-  security:
-  oauth2:
-    client:
-      client-id: tracker-client
-      client-secret: supersecret
-      token-info-uri: http://oauth-pal-egerr.cfapps.io/oauth/check_token
-      access-token-uri: http://oauth-pal-egerr.cfapps.io/oauth/token
