--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -32,3 +32,7 @@ bootRun.environment([
     "REGISTRATION_SERVER_ENDPOINT": "http://registration-server",
     "EUREKA_CLIENT_OAUTH2_CLIENTID": "eureka-client"
 ])
+
+test.environment([
+        "REGISTRATION_SERVER_ENDPOINT": "http://registration-server"
+])
